--- a/client/src/Components/game/Game.css
+++ b/client/src/Components/game/Game.css
@@ -3,7 +3,7 @@ body {
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 20px;
   box-sizing: border-box;
-  background-color: rgba(35, 42, 143, 0.4);
+  /* background-color: rgba(241, 86, 14, 0.4); */
 }
 
 .luanguages{
