--- a/client/src/Components/Events/Game.css
+++ b/client/src/Components/Events/Game.css
@@ -1,6 +1,6 @@
 .game-container{
     text-align: center;
-    background-color:rgba(228, 235, 235, 0.452);
+    
 
 
 }   
@@ -11,6 +11,7 @@
 }
 .image-button h2{
     font-size:calc(4px + 2vw);
+
 }
 
 
@@ -21,7 +22,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color:white;
-    background-image: linear-gradient(rgba(32, 95, 233, 0.781), rgba(238, 236, 232, 0.795));
+    background-image: linear-gradient(#00367dd5, rgba(238, 236, 232, 0.795));
     height:calc(10px+ 10vw);
     width:calc(10px+ 10vw);
 
@@ -35,12 +36,20 @@
     letter-spacing: 1px;
 }
 
+.question-div h1{
+
+ -webkit-text-fill-color: white;
+ -webkit-text-stroke-width: 2px;
+ -webkit-text-stroke-color:#00367d;
+
+}
 
 .learn-more-div{
     display: flex;
     text-align: center;
     justify-content:center;
     padding:20px;
+
 
 }
 
@@ -50,14 +59,14 @@
     text-align: center;
     font-size:20px;
     font-weight:600;
-    color:rgb(24, 23, 23);
-    background-color:rgba(19,151,213,255);
-    ;
+    color:white;
+    background-color:#00367d;
+
 
 
 }
 .game-button {
-    font-size:25px;
+    font-size:20px;
     font-weight:800;
 }
 @media all and (max-width:400px){
