--- a/client/src/Components/Navbar/Button.css
+++ b/client/src/Components/Navbar/Button.css
@@ -4,24 +4,23 @@
   
   .btn1 {
     padding: 8px 20px;
-    margin-bottom: 1.5rem;
     border-radius: 4px;
     outline: none;
     border: none;
-    font-size: 18px;
+    font-size: 1rem;
     color: #fff;
     cursor: pointer;
-    background-color: var(--primary);
-    margin-top:0.4rem;
+    background-color:#00367d;
+    padding: 0.4rem 1rem;
+
 
   }
   
   .btn1:hover {
-    padding: 6px 18px;
     transition: all 0.3s ease-out;
     background-color: transparent;
-    color: #fff;
+    color: #00367d;
     border-radius: 4px;
-    border: 2px solid var(--primary);
+    border: 2px solid #00367d;
     transition: all 0.3s ease-out;
   }
